# linear-programming-and-applications-in-python

./: Exercise1.py  Exercise10.py  Exercise11.py  Exercise2.py  Exercise3.py  Exercise6.py  Exercise8.py  Exercise9.py  pyproject.toml  requirements.txt
aula-01/: Exercícios - Aula 01 (Modelagem Matemática).XLSX  Exercícios - Aula 01 (Modelagem Matemática)_01.XLSX
aula-02/: Exercícios - Aula 02 (Método gráfico).xlsx
aula-03/: Exercícios - Aula 03 (Método Simplex).xlsx
aula-04/: Exercícios - Aula 04(Pert_CPM).xlsx
exercises/: Exercise1.py  Exercise10.py  Exercise11.py  Exercise12.py  Exercise2.py  Exercise3.py  Exercise4.py  Exercise5.py  Exercise6.py  Exercise7.py  Exercise8.py  Exercise9.py
prova-01/enunciado/: Atividade 01_Método Gráfico.xlsx
prova-01/q1/: exercise01  q1.py
prova-01/q10/: exercise10  q10.py
prova-01/q2/: exercise02  q2.py
prova-01/q3/: exercise03  q3.py
prova-01/q4/: exercise04  q4.py
prova-01/q5/: exercise05  q5.py
prova-01/q6/: exercise06  q6.py
prova-01/q7/: exercise07  q7.py
prova-01/q8/: exercise08  q8.py
prova-01/q9/: exercise09  q9.py
prova-02/enunciado/: [atividade]-simplex-vinicius-andrade.xlsx
prova-02/q1/: exercise01-modelling.txt  q1.py
prova-02/q10/: exercise10-modelling.txt  q10.py
prova-02/q2/: exercise02-modelling.txt  q2.py
prova-02/q3/: exercise03-modelling.txt  q3.py
prova-02/q4/: exercise04-modelling.txt  q4.py
prova-03/: exercise10.py  solution.py  solution.txt
prova-04/: exercise10  exercise10.py  exercise10solution2.py
prova-05/: Exercícios - Aula 04(Pert_CPM).xlsx
(+14 files in other folders)
